--- a/age/compose.yaml
+++ b/age/compose.yaml
@@ -2,13 +2,12 @@ version: "2"
 
 services:
   age:
-    image: docker.io/apache/age
+    image: docker.io/apache/age:latest
     container_name: age
     network_mode: bridge
     ports:
       - "5432:5432"
     environment:
-      - TZ=Asia/Shanghai
       - POSTGRES_USER=postgresUser
       - POSTGRES_PASSWORD=postgresPW
       - POSTGRES_DB=postgresDB
