--- a/clickhouse/1/compose.yaml
+++ b/clickhouse/1/compose.yaml
@@ -1,22 +1,20 @@
+version: "2"
+
 services:
-  ch_server:
-    image: yandex/clickhouse-server
+  clickhouse:
+    image: docker.io/clickhouse/clickhouse-server:${TAG:-latest}
+    container_name: clickhouse
+    hostname: clickhouse
+    network_mode: bridge
     ports:
       - "8123:8123"
+      - "9000:9000"
     volumes:
-      - ./db:/var/lib/clickhouse
-    networks:
-      - ch_ntw
+      - data:/var/lib/clickhouse
+      - log:/var/log/clickhouse-server/
 
-  # ch_client:
-  #   image: yandex/clickhouse-client
-  #   entrypoint:
-  #     - /bin/sleep
-  #   command:
-  #     - infinity
-  #   networks:
-  #     - ch_ntw
-
-networks:
-  ch_ntw:
-    driver: bridge
+volumes:
+  data:
+    driver: local
+  log:
+    driver: local
