--- a/influxdb/v1/compose.yaml
+++ b/influxdb/v1/compose.yaml
@@ -1,8 +1,10 @@
+version: "3"
+
 services:
   influxdb:
     image: docker.io/influxdb:1.8-alpine
-    # restart: unless-stopped
     container_name: influxdb-v1
+    hostname: influxdb-v1
     # network_mode: host
     network_mode: bridge
     ports:
