jupyter/pyspark-notebook

--- a/jupyter-notebook/1/compose.yaml
+++ b/jupyter-notebook/1/compose.yaml
@@ -1,21 +1,21 @@
 version: "3"
 
 services:
-  # jupyterlab with pyspark
-  jupyter:
-    image: jupyter/pyspark-notebook:${TAG:-python-3.10}
+  pyspark-notebook:
+    image: docker.io/jupyter/pyspark-notebook:${TAG:-python-3.10}
     container_name: jupyter
-    host: jupyter
+    hostname: jupyter
     network_mode: bridge
     ports:
       - 8888:8888
       - "4040-4080:4040-4080"
+    user: root
+    environment:
+      - JUPYTER_TOKEN=easytoken
+      - GRANT_SUDO=yes
     volumes:
       - work:/home/jovyan/work
-      - data:/home/jovyan/data
 
 volumes:
   work:
-    driver: local
-  data:
     driver: local
