--- a/mysql/2/compose.yaml
+++ b/mysql/2/compose.yaml
@@ -1,14 +1,20 @@
-version: "2"
+version: "2.1"
 
 services:
   mysql:
-    image: bitnami/mysql:latest
-    # restart: unless-stopped
-    network_mode: bridge
+    image: docker.io/bitnami/mysql:8.0
     ports:
-      - 3306:3306
+      - "3306:3306"
+    volumes:
+      - "mysql_data:/bitnami/mysql/data"
     environment:
-      - MYSQL_ROOT_PASSWORD=password123
+      # ALLOW_EMPTY_PASSWORD is recommended only for development.
+      - ALLOW_EMPTY_PASSWORD=yes
     volumes:
       - ./volume/mysql-persistence:/bitnami/mysql/data
       - ./volume/my_custom.cnf:/opt/bitnami/mysql/conf/my_custom.cnf:ro
+    healthcheck:
+      test: ["CMD", "/opt/bitnami/scripts/mysql/healthcheck.sh"]
+      interval: 15s
+      timeout: 5s
+      retries: 6
