--- a/mysql/3/compose.yaml
+++ b/mysql/3/compose.yaml
@@ -2,7 +2,7 @@ version: "2.4"
 
 services:
   mysql:
-    image: mysql:5.7
+    image: docker.io/mysql:8-debian
     command: --default-authentication-plugin=mysql_native_password
     # restart: unless-stopped
     network_mode: bridge
