--- a/linux/fedora-38/compose.yaml
+++ b/linux/fedora-38/compose.yaml
@@ -2,8 +2,8 @@ version: "2"
 
 services:
   fedora:
-    image: docker.io/fedora:38
-    container_name: fedora-38
+    image: fedora:35
+    container_name: fedora35
     network_mode: host
     tty: true
     stdin_open: true
