--- a/linux/almalinux-9/compose.yaml
+++ b/linux/almalinux-9/compose.yaml
@@ -1,8 +1,6 @@
-version: "2"
-
 services:
   almalinux:
-    image: docker.io/almalinux:9
+    image: almalinux:9
     container_name: almalinux-9
     network_mode: host
     tty: true
