--- a/linux/almalinux-8/compose.yaml
+++ b/linux/almalinux-8/compose.yaml
@@ -1,6 +1,8 @@
+version: "2"
+
 services:
   almalinux:
-    image: almalinux:8
+    image: docker.io/almalinux:8
     container_name: almalinux-8
     network_mode: host
     tty: true
