--- a/linux/kali/compose.yaml
+++ b/linux/kali/compose.yaml
@@ -1,6 +1,8 @@
+version: "2"
+
 services:
   kali:
-    image: kalilinux/kali-rolling:latest
+    image: docker.io/kalilinux/kali-rolling:latest
     container_name: kalilinux
     network_mode: host
     tty: true
