--- a/linux/opensuse-tumbleweed/compose.yaml
+++ b/linux/opensuse-tumbleweed/compose.yaml
@@ -1,6 +1,8 @@
+version: "2"
+
 services:
   opensuse:
-    image: opensuse/tumbleweed:latest
+    image: docker.io/opensuse/tumbleweed:latest
     container_name: opensuse-tumbleweed
     network_mode: host
     tty: true
