--- a/linux/fedora-38/compose.yaml
+++ b/linux/fedora-38/compose.yaml
@@ -1,6 +1,8 @@
+version: "2"
+
 services:
   fedora:
-    image: fedora:38
+    image: docker.io/fedora:38
     container_name: fedora-38
     network_mode: host
     tty: true
