--- a/linux/ubuntu-22.04/compose.yaml
+++ b/linux/ubuntu-22.04/compose.yaml
@@ -1,6 +1,8 @@
+version: "2"
+
 services:
   ubuntu:
-    image: ubuntu:jammy
+    image: docker.io/ubuntu:jammy
     container_name: ubuntu-jammy
     network_mode: host
     tty: true
