--- a/linux/ubuntu-22.04/compose.yaml
+++ b/linux/ubuntu-22.04/compose.yaml
@@ -1,8 +1,9 @@
+version: "2"
+
 services:
   ubuntu:
-    image: ubuntu:jammy
+    image: docker.io/ubuntu:jammy
     container_name: ubuntu-jammy
-    restart: always
     network_mode: host
     tty: true
     stdin_open: true
