--- a/linux/alpine/compose.yaml
+++ b/linux/alpine/compose.yaml
@@ -1,8 +1,9 @@
+version: "2"
+
 services:
   alpine:
-    image: alpine:latest
+    image: docker.io/alpine:latest
     container_name: alpine
-    # restart: always
     network_mode: host
     tty: true
     stdin_open: true
