--- a/linux/debian-12/compose.yaml
+++ b/linux/debian-12/compose.yaml
@@ -1,8 +1,9 @@
+version: "2"
+
 services:
   debian:
-    image: debian:bookworm
+    image: docker.io/debian:bookworm
     container_name: debian-bookworm
-    restart: always
     network_mode: host
     tty: true
     stdin_open: true
