--- a/linux/ubuntu-20.04/compose.yaml
+++ b/linux/ubuntu-20.04/compose.yaml
@@ -1,8 +1,9 @@
+version: "2"
+
 services:
   ubuntu:
-    image: ubuntu:focal
+    image: docker.io/ubuntu:focal
     container_name: ubuntu-focal
-    restart: always
     network_mode: host
     tty: true
     stdin_open: true
