--- a/jupyter-notebook/6/Dockerfile
+++ b/jupyter-notebook/6/Dockerfile
@@ -1,12 +1,14 @@
 # Choose your desired base image
-FROM jupyter/scipy-notebook:latest
+FROM jupyter/minimal-notebook:latest
 
 # name your environment and choose the python version
-ARG conda_env=python39
+ARG conda_env=py39
 ARG py_ver=3.9
 
 # you can add additional libraries you want mamba to install by listing them below the first line and ending with "&& \"
-RUN mamba create --quiet --yes -p "${CONDA_DIR}/envs/${conda_env}" python=${py_ver} ipython ipykernel && \
+RUN mamba create --quiet --yes -p "${CONDA_DIR}/envs/${conda_env}" python=${py_ver} \
+        'ipython' \
+        'ipykernel' && \
     mamba clean --all -f -y
 
 # alternatively, you can comment out the lines above and uncomment those below
