customized ubuntu 22.04 lts image

--- a/linux/ubuntu-22.04/compose.yaml
+++ b/linux/ubuntu-22.04/compose.yaml
@@ -2,7 +2,10 @@ version: "2"
 
 services:
   ubuntu:
-    image: docker.io/ubuntu:jammy
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: aaronchenwei/ubuntu-jammy
     container_name: ubuntu-jammy
     network_mode: host
     tty: true
