--- a/linux/ubuntu-22.04/Dockerfile
+++ b/linux/ubuntu-22.04/Dockerfile
@@ -1,6 +1,7 @@
 FROM docker.io/ubuntu:jammy
 
 USER root
+WORKDIR /root
 
 RUN sed -i 's@//.*archive.ubuntu.com@//mirrors.aliyun.com@g' /etc/apt/sources.list \
     && sed -i 's/security.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list \
@@ -11,11 +12,7 @@ RUN sed -i 's@//.*archive.ubuntu.com@//mirrors.aliyun.com@g' /etc/apt/sources.li
 
 RUN apt-get install -y wget build-essential git cmake python3 python3-pip
 
-WORKDIR /tmp
-
 RUN wget -nv 'https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh' -O conda.sh \
     && bash conda.sh -b -p /opt/conda \
     && rm conda.sh \
     && ln -s /opt/conda/etc/profile.d/conda.sh /etc/profile.d/conda.sh
-
-WORKDIR $HOME
