--- a/linux/ubuntu-22.04/Dockerfile
+++ b/linux/ubuntu-22.04/Dockerfile
@@ -10,7 +10,7 @@ RUN sed -i 's@//.*archive.ubuntu.com@//mirrors.aliyun.com@g' /etc/apt/sources.li
     && apt-get install -y ca-certificates \
     && sed -i 's/http:/https:/g' /etc/apt/sources.list
 
-RUN apt-get install -y wget build-essential git cmake python3 python3-pip
+RUN apt-get install -y wget vim build-essential git cmake python3 python3-pip
 
 RUN wget -nv 'https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh' -O conda.sh \
     && bash conda.sh -b -p /opt/conda \
