--- a/jupyter-notebook/6/compose.yaml
+++ b/jupyter-notebook/6/compose.yaml
@@ -1,15 +1,45 @@
 version: "3"
 
 services:
-  jupyter-notebook:
+  jupyter1:
     build:
-      dockerfile: Dockerfile
-    image: aaronchenwei/jupyter-notebook:latest
+      dockerfile: Dockerfile1
+    image: aaronchenwei/jupyter-notebook1:latest
     container_name: jupyter-notebook
     hostname: jupyter-notebook
     user: root
     ports:
-      - 8888:8888
+      - 8881:8888
+    environment:
+      - JUPYTER_TOKEN=easytoken
+      - GRANT_SUDO=yes
+    volumes:
+      - work:/home/jovyan/work
+
+  jupyter2:
+    build:
+      dockerfile: Dockerfile2
+    image: aaronchenwei/jupyter-notebook2:latest
+    container_name: jupyter-notebook
+    hostname: jupyter-notebook
+    user: root
+    ports:
+      - 8882:8888
+    environment:
+      - JUPYTER_TOKEN=easytoken
+      - GRANT_SUDO=yes
+    volumes:
+      - work:/home/jovyan/work
+
+  jupyter3:
+    build:
+      dockerfile: Dockerfile3
+    image: aaronchenwei/jupyter-notebook3:latest
+    container_name: jupyter-notebook
+    hostname: jupyter-notebook
+    user: root
+    ports:
+      - 8883:8888
     environment:
       - JUPYTER_TOKEN=easytoken
       - GRANT_SUDO=yes
