linux external volume

--- a/linux/opensuse-tumbleweed/compose.yaml
+++ b/linux/opensuse-tumbleweed/compose.yaml
@@ -7,5 +7,7 @@ services:
     network_mode: host
     tty: true
     stdin_open: true
+    volumes:
+      - shared:/root/shared
     environment:
       - TZ=Asia/Shanghai
