--- a/linux/ubuntu-22.04/compose.yaml
+++ b/linux/ubuntu-22.04/compose.yaml
@@ -10,5 +10,11 @@ services:
     network_mode: host
     tty: true
     stdin_open: true
+    volumes:
+      - shared:/root/shared
     environment:
       - TZ=Asia/Shanghai
+
+volumes:
+  shared:
+    external: true
