--- a/linux/arch/compose.yaml
+++ b/linux/arch/compose.yaml
@@ -8,5 +8,11 @@ services:
     network_mode: host
     tty: true
     stdin_open: true
+    volumes:
+      - shared:/root/shared
     environment:
       - TZ=Asia/Shanghai
+
+volumes:
+  shared:
+    external: true
