--- a/linux/debian-12/compose.yaml
+++ b/linux/debian-12/compose.yaml
@@ -7,5 +7,11 @@ services:
     network_mode: host
     tty: true
     stdin_open: true
+    volumes:
+      - shared:/root/shared
     environment:
       - TZ=Asia/Shanghai
+
+volumes:
+  shared:
+    external: true
