--- a/jupyter-notebook/6/Dockerfile1
+++ b/jupyter-notebook/6/Dockerfile1
@@ -2,13 +2,18 @@
 FROM jupyter/minimal-notebook:latest
 
 # name your environment and choose the python version
-ARG conda_env=py39
-ARG py_ver=3.9
+ARG conda_env=py310
+ARG py_ver=3.10
 
 # you can add additional libraries you want mamba to install by listing them below the first line and ending with "&& \"
 RUN mamba create --quiet --yes -p "${CONDA_DIR}/envs/${conda_env}" python=${py_ver} \
         'ipython' \
-        'ipykernel' && \
+        'ipykernel' \
+        'networkit' \
+        'pandas' \
+        'matplotlib' \
+        'tabulate' \
+        'powerlaw' && \
     mamba clean --all -f -y
 
 # alternatively, you can comment out the lines above and uncomment those below
