--- a/milvus/standalone/compose.yaml
+++ b/milvus/standalone/compose.yaml
@@ -1,4 +1,4 @@
-version: '3.5'
+version: "3.5"
 
 services:
   etcd:
@@ -12,6 +12,11 @@ services:
     volumes:
       - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/etcd:/etcd
     command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
+    deploy:
+      resources:
+        limits:
+          cpus: "4.0"
+          memory: "8g"
 
   minio:
     container_name: milvus-minio
@@ -27,6 +32,11 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
+    deploy:
+      resources:
+        limits:
+          cpus: "4.0"
+          memory: "8g"
 
   standalone:
     container_name: milvus-standalone
@@ -43,6 +53,11 @@ services:
     depends_on:
       - "etcd"
       - "minio"
+    deploy:
+      resources:
+        limits:
+          cpus: "8.0"
+          memory: "16g"
 
 networks:
   default:
