--- a/spark/1/compose.yaml
+++ b/spark/1/compose.yaml
@@ -1,8 +1,8 @@
-version: "2"
+version: '2'
 
 services:
   spark:
-    image: docker.io/bitnami/spark:3.3
+    image: docker.io/bitnami/spark:3.4
     environment:
       - SPARK_MODE=master
       - SPARK_RPC_AUTHENTICATION_ENABLED=no
@@ -11,9 +11,10 @@ services:
       - SPARK_SSL_ENABLED=no
       - SPARK_USER=spark
     ports:
-      - "8080:8080"
+      - '8080:8080'
+
   spark-worker:
-    image: docker.io/bitnami/spark:3.3
+    image: docker.io/bitnami/spark:3.4
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark:7077
