--- a/cmak/1/compose.yaml
+++ b/cmak/1/compose.yaml
@@ -1,16 +1,43 @@
-version: "3.6"
+version: "3"
 
 services:
   zk:
     image: zookeeper:latest
-    restart: always
+    # restart: always
     environment:
       ZOO_SERVERS: server.1=0.0.0.0:2888:3888;2181
 
   cmak:
-    image: ghcr.io/eshepelyuk/dckr/cmak-3.0.0.5:latest
-    restart: always
+    image: ghcr.io/eshepelyuk/dckr/cmak-3.0.0.6:latest
+    # restart: always
     ports:
       - "9000:9000"
+    depends_on:
+      - "zk"
     environment:
       ZK_HOSTS: "zk:2181"
+
+  cmak2zk:
+    image: ghcr.io/eshepelyuk/dckr/cmak2zk:latest
+    # restart: on-failure
+    command:
+      - 'zk:2181'
+      - '/app/etc/clusters.yaml'
+    depends_on:
+      - "zk"
+    volumes:
+      - "${PWD}/clusters.yaml:/app/etc/clusters.yaml:ro"
+
+###############################################################
+#     This Kafka setup is only for demonstration purpose.     #
+###############################################################
+  kafka:
+    image: wurstmeister/kafka:2.12-2.4.1
+    # restart: always
+    depends_on:
+      - "zk"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: "kafka"
+      KAFKA_CREATE_TOPICS: "test:1:1"
+      KAFKA_ZOOKEEPER_CONNECT: "zk:2181"
+###############################################################
