--- a/linux/archlinux/compose.yaml
+++ b/linux/archlinux/compose.yaml
@@ -1,10 +1,10 @@
-version: "2"
+version: "3"
 
 services:
   archlinux:
     image: docker.io/archlinux:latest
     container_name: archlinux
-    restart: always
+    # restart: always
     network_mode: host
     tty: true
     stdin_open: true
