--- a/linux/fedora/Dockerfile
+++ b/linux/fedora/Dockerfile
@@ -3,5 +3,7 @@ FROM docker.io/fedora:38
 USER root
 WORKDIR /root
 
-RUN dnf upgrade -y \
+RUN dnf makecache \
+    && dnf upgrade -y \
+    && dnf install vim gcc-c++ clang cmake ninja-build git -y \
     && dnf clean all
