--- a/linux/almalinux-9/compose.yaml
+++ b/linux/almalinux-9/compose.yaml
@@ -1,7 +1,7 @@
-version: "2"
+version: "3"
 
 services:
-  almalinux:
+  almalinux-9:
     image: docker.io/almalinux:9
     container_name: almalinux-9
     network_mode: host
