--- a/nexus/2/Dockerfile
+++ b/nexus/2/Dockerfile
@@ -9,7 +9,7 @@ RUN rpm -ivh https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.
 
 USER nexus
 
-# ENV LD_PRELOAD /usr/lib64/libtcmalloc.so.4
-ENV LD_PRELOAD /usr/lib64/libjemalloc.so.2
+ENV LD_PRELOAD /usr/lib64/libtcmalloc.so.4
+# ENV LD_PRELOAD /usr/lib64/libjemalloc.so.2
 
 ENV INSTALL4J_ADD_VM_PARAMS="-XX:+AlwaysPreTouch -XX:+UseG1GC -Xms2703m -Xmx2703m -XX:MaxDirectMemorySize=2703m -Djava.util.prefs.userRoot=${NEXUS_DATA}/javaprefs"
