--- a/neo4j/1/compose.yaml
+++ b/neo4j/1/compose.yaml
@@ -1,8 +1,8 @@
-version: "2"
+version: "3"
 
 services:
   neo4j:
-    image: docker.io/neo4j:${TAG-latest}
+    image: docker.io/neo4j:${TAG-community}
     environment:
       - NEO4J_AUTH=none
       # - NEO4J_AUTH=neo4j/learnneo4j
@@ -11,6 +11,7 @@ services:
       # - NEO4J_dbms_memory_heap_max__size=31G
       - NEO4J_dbms_jvm_additional=-XX:+AlwaysPreTouch
       - TZ=Asia/Shanghai
+      - MALLOC_ARENA_MAX=1
     network_mode: bridge
     ports:
       - 7474:7474
