--- a/dolphinscheduler/compose.yaml
+++ b/dolphinscheduler/compose.yaml
@@ -1,8 +1,8 @@
-version: "3.8"
+version: "3"
 
 services:
   dolphinscheduler-postgresql:
-    image: bitnami/postgresql:11.11.0
+    image: bitnami/postgresql:15.2.0
     ports:
       - "5432:5432"
     profiles: ["all", "schema"]
@@ -21,7 +21,7 @@ services:
       - dolphinscheduler
 
   dolphinscheduler-zookeeper:
-    image: bitnami/zookeeper:3.6.2
+    image: bitnami/zookeeper:3.7.1
     profiles: ["all"]
     environment:
       ALLOW_ANONYMOUS_LOGIN: "yes"
@@ -55,6 +55,7 @@ services:
     image: ${HUB}/dolphinscheduler-api:${TAG}
     ports:
       - "12345:12345"
+      - "25333:25333"
     profiles: ["all"]
     env_file: .env
     healthcheck:
@@ -81,6 +82,9 @@ services:
       interval: 30s
       timeout: 5s
       retries: 3
+    depends_on:
+      dolphinscheduler-zookeeper:
+        condition: service_healthy
     volumes:
       - dolphinscheduler-logs:/opt/dolphinscheduler/logs
     networks:
