--- a/linux/debian-11/Dockerfile
+++ b/linux/debian-11/Dockerfile
@@ -3,7 +3,7 @@ FROM docker.io/debian:bullseye
 USER root
 WORKDIR /root
 
-RUN sed -i 's/deb.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list \
+RUN sed -i 's/deb.debian.org/mirrors.tuna.tsinghua.edu.cn/g' /etc/apt/sources.list \
     && apt-get update \
     && apt-get upgrade -y \
     && apt-get install -y ca-certificates \
