--- a/linux/debian-12/Dockerfile
+++ b/linux/debian-12/Dockerfile
@@ -3,7 +3,7 @@ FROM docker.io/debian:bookworm
 USER root
 WORKDIR /root
 
-RUN sed -i 's/deb.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list.d/debian.sources \
+RUN sed -i 's/deb.debian.org/mirrors.tuna.tsinghua.edu.cn/g' /etc/apt/sources.list.d/debian.sources \
     && apt-get update \
     && apt-get upgrade -y \
     && apt-get install -y ca-certificates \
