--- a/age/compose.yaml
+++ b/age/compose.yaml
@@ -1,13 +1,14 @@
 version: "2"
 
 services:
-  age:
+  apache-age:
     image: docker.io/apache/age:latest
-    container_name: age
+    container_name: apache-age
     network_mode: bridge
     ports:
       - "5432:5432"
     environment:
+      - TZ=Asia/Shanghai
       - POSTGRES_USER=postgresUser
       - POSTGRES_PASSWORD=postgresPW
       - POSTGRES_DB=postgresDB
