--- a/dgraph/compose.yaml
+++ b/dgraph/compose.yaml
@@ -4,7 +4,7 @@ services:
   zero:
     image: dgraph/dgraph:latest
     volumes:
-      - /tmp/data:/dgraph
+      - ./data/zero:/dgraph
     ports:
       - 5080:5080
       - 6080:6080
@@ -14,7 +14,7 @@ services:
   alpha:
     image: dgraph/dgraph:latest
     volumes:
-      - /tmp/data:/dgraph
+      - ./data/alpha:/dgraph
     ports:
       - 8080:8080
       - 9080:9080
