--- a/apache-activemq/Dockerfile
+++ b/apache-activemq/Dockerfile
@@ -1,6 +1,6 @@
-FROM bellsoft/liberica-openjdk-alpine:17
+FROM docker.io/eclipse-temurin:17-alpine
 
-ENV ACTIVEMQ_VERSION 5.17.4
+ENV ACTIVEMQ_VERSION 5.18.0
 ENV ACTIVEMQ apache-activemq-$ACTIVEMQ_VERSION
 ENV ACTIVEMQ_HOME /opt/activemq
 
