--- a/influxdb/v2/1/compose.yaml
+++ b/influxdb/v2/1/compose.yaml
@@ -2,10 +2,9 @@ version: "3"
 
 services:
   influxdb:
-    image: influxdb:2.7-alpine
+    image: docker.io/influxdb:2.7-alpine
     container_name: influxdb-v2
     hostname: influxdb-v2
-    # network_mode: host
     network_mode: bridge
     ports:
       - 8086:8086
