--- a/linux/alpine/compose.yaml
+++ b/linux/alpine/compose.yaml
@@ -1,8 +1,11 @@
-version: "2"
+version: "3"
 
 services:
   alpine:
-    image: docker.io/alpine:latest
+    build:
+        context: .
+        dockerfile: Dockerfile
+    image: aaronchenwei/alpine:3.18.2
     container_name: alpine
     network_mode: host
     tty: true
