redhat/ubi9-minimal

--- a/cmak/2/Dockerfile
+++ b/cmak/2/Dockerfile
@@ -1,21 +1,17 @@
-FROM docker.io/alpine:3.18 as build
+FROM docker.io/redhat/ubi9-minimal as build
 
 ENV CMAK_VERSION 3.0.0.6
 
-RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.tuna.tsinghua.edu.cn/g' /etc/apk/repositories
+RUN microdnf install -y unzip \
+    && microdnf clean all
 
-RUN apk add --update curl unzip && \
-    rm -rf /var/cache/apk/*
+RUN set -e \
+    && curl -L https://github.com/yahoo/CMAK/releases/download/${CMAK_VERSION}/cmak-${CMAK_VERSION}.zip -o /tmp/cmak.zip \
+    && unzip /tmp/cmak.zip -d / \
+    && ln -s /cmak-$CMAK_VERSION /cmak \
+    && rm -rf /tmp/cmak.zip
 
-RUN <<EOF
-    set -e
-    curl -L https://github.com/yahoo/CMAK/releases/download/${CMAK_VERSION}/cmak-${CMAK_VERSION}.zip -o /tmp/cmak.zip
-    unzip /tmp/cmak.zip -d /
-    ln -s /cmak-$CMAK_VERSION /cmak
-    rm -rf /tmp/cmak.zip
-EOF
-
-FROM eclipse-temurin:11-jre-alpine
+FROM docker.io/eclipse-temurin:11-jre-ubi9-minimal
 COPY --from=build /cmak /cmak
 VOLUME /cmak/conf
 ENV JAVA_OPTS=-XX:MaxRAMPercentage=80
